--- a/mafia/index.html
+++ b/mafia/index.html
@@ -234,10 +234,11 @@
     <div id="bugList">
       sometimes mafia has no mafia killing night 1 (MEDIUM PRIORITY)
       sometimes no mafia is added at beginning (its a feature?)
-      witch can't be jailed/rbd to prevent witch effect (sorry, can't do much about this)
+      witch can't be jailed to prevent witch effect (sorry, can't do much about this)
       when mafia gets lynched, mafia members are not immediately promoted (BIG PRIORITY)
       if vigilante gets converted, the death log says that they were killed by vampire (SMALL PRIORITY)
       mafia being bitten die even if healed (MEDIUM PRIORITY)
+      godfather forces mafia to attack when godfather doesn't do any actions (BIG PRIORITY)
       TODO add win condition check (UNLIKELY)
       TODO add coven (MAYBE)
       TODO add "star-crossed lovers" (MAYBE)
@@ -970,9 +971,13 @@
           break;
           case "werewolf":
           options = players.filter(function(o) {
-            return !o.dead && o.index != turn;
+            return !o.dead;
           });
           for(let i in options){
+            if(options[i].index == turn){
+              string += `<div><o>${options[i].name}</o><button style="background: brown;" onclick="(function(){players[turn].NightAction.target = ${options[i].index}; narrator_text.innerHTML = '<p>You decide to rampage at your house tonight</p>';})()"></button></div>`;
+              continue;
+            }
             string += `<div><o>${options[i].name}</o><button onclick="(function(){players[turn].NightAction.target = ${options[i].index}; narrator_text.innerHTML = '<p>You decide to rampage at the house of ${options[i].name} tonight</p>';})()"></button></div>`;
           }
           string += `<div><a onclick="(function(){players[turn].NightAction = {}; narrator_text.innerHTML = '<p>You change your mind</p>'})()">cancel</a></div>`;
@@ -1524,7 +1529,7 @@
             })() : null;
             break;
             case "jester":
-            alive[i].NightAction.target >= 0 ? (()=>{
+            alive[i].NightAction.target >= 0 && alive[i].hasWon ? (()=>{
               dayInfo[alive[i].NightAction.target].information.push({
                 type: "attack",
                 value: 3,
@@ -1555,10 +1560,10 @@
                 visit: true
               });
             })() : null;
-            alive[i].NightAction.target >= 0 && alive[i].NightAction.target == alive[i].index ? (()=>{
-              dayInfo[alive[i].NightAction.target].information.push({
+            (alive[i].NightAction.target >= 0 && alive[i].NightAction.target == alive[i].index) || (!(alive[i].NightAction.target >= 0) && !(night % 2)) ? (()=>{
+              dayInfo[alive[i].NightAction.target >= 0 ? alive[i].NightAction.target : alive[i].index].information.push({
                 type: "attack",
-                value: 2,
+                value: 0,
                 by: alive[i].index,
                 visit: false
               });
@@ -1589,7 +1594,7 @@
         //rb stuff (witches will know they are rbd, but they can use magic to do their action anyways. at least, that's the explanation i have for my laziness)
         for(let i in dayInfo){
           //evaluate actions. if rbd, jailed, etc, remove actions. Then get main results if applicable
-          if(dayInfo[i].information.filter(o=>{return o.type == "jailed";}).length){ //jailed
+          if(dayInfo[i].information.filter(o=>{return o.type == "jail";}).length){ //jailed
             //go through all other players to remove any actions matching the user's id
             for(let j in dayInfo){
               if(dayInfo[j].information.filter(o=>{return o.by == dayInfo[i].index;}).length){
@@ -1599,11 +1604,11 @@
             //if user is sk / ww, add attack on jailor if jailor didn't execute user
             if(/(serialkiller)|(werewolf)/g.test(players[dayInfo[i].index].role) && !dayInfo[i].information.filter(o=>{return o.type == "attack" && players[o.by].role == "jailor"}).length){
               for(let j in dayInfo){
-                if(dayInfo[j].filter(o=>{return players[o.index].role == "jailor";}).length){
+                if(players[dayInfo[j].index].role == "jailor"){
                   if((night % 2) && players[dayInfo[i].index].role == "werewolf"){
                     break;
                   }
-                  dayInfo[[j].filter(o=>{return players[o.index].role == "jailor";})[0].index].information.push({
+                  dayInfo[j].information.push({
                     type: "attack",
                     value: 1,
                     by: dayInfo[i].index,
@@ -1629,6 +1634,23 @@
             for(let j in dayInfo){
               if(dayInfo[j].information.filter(o=>{return o.by == dayInfo[i].index && o.visit && !/(escort)|(consort)/g.test(players[o.by].role);}).length){
                 dayInfo[j].information = dayInfo[j].information.filter(o=>{return !(o.by == dayInfo[i].index && o.visit);});
+              }
+            }
+            //if user is sk / ww, add attack on roleblocker
+            if(/(serialkiller)|(werewolf)/g.test(players[dayInfo[i].index].role)){
+              for(let j in dayInfo){
+                if(/(consort)|(escort)/g.test(players[dayInfo[j].index].role) && dayInfo[i].information.filter(o=>{return o.by == dayInfo[j].index;}).length){
+                  if((night % 2) && players[dayInfo[i].index].role == "werewolf"){
+                    break;
+                  }
+                  dayInfo[j].information.push({
+                    type: "attack",
+                    value: 1,
+                    by: dayInfo[i].index,
+                    visit: false,
+                    message: "You were attacked by the person you roleblocked"
+                  });
+                }
               }
             }
             //if user has limited uses
@@ -1697,7 +1719,7 @@
         }
         //special veteran stuff
         for(let i in dayInfo){
-          if(players[dayInfo[i].index].role == "veteran" && dayInfo[i].information.filter(o=>{return o.type=="alert";}).length && !dayInfo[i].information.filter(o=>{return o.type=="jailed"}).length){
+          if(players[dayInfo[i].index].role == "veteran" && dayInfo[i].information.filter(o=>{return o.type=="alert";}).length && !dayInfo[i].information.filter(o=>{return o.type=="jail"}).length){
             for(let j in dayInfo[i].information){
               if(dayInfo[i].information[j].visit){
                 dayInfo[dayInfo[i].information[j].by].information.push({
@@ -1736,7 +1758,7 @@
         //special werewolf stuff
         for(let i in dayInfo){
           //if user is werewolf and not jailed or roleblocked
-          if(players[dayInfo[i].index].role == "werewolf" && !dayInfo[i].information.filter(o=>{return o.type=="jailed"||o.type=="rb"}).length){
+          if(players[dayInfo[i].index].role == "werewolf" && !dayInfo[i].information.filter(o=>{return o.type=="jail"||o.type=="rb"}).length){
             for(let j in dayInfo){
               if(dayInfo[j].information.filter(o=>{return o.by == dayInfo[i].index && o.visit}).length){
                 let l = dayInfo[j].information.filter(o=>{return o.by != dayInfo[i].index && o.visit});
@@ -1767,19 +1789,19 @@
         }
         //arsonist clean
         for(let i in dayInfo){
-          if(players[dayInfo[i].index].role == "arsonist" && dayInfo[i].information.filter(o=>{return o.type=="remove";}).length && !dayInfo[i].information.filter(o=>{return o.type=="jailed"||o.type=="rb";}).length){
+          if(players[dayInfo[i].index].role == "arsonist" && dayInfo[i].information.filter(o=>{return o.type=="remove";}).length && !dayInfo[i].information.filter(o=>{return o.type=="jail"||o.type=="rb";}).length){
             dousedPlayers = dousedPlayers.filter(o=>{return o != dayInfo[i].index});
           }
         }
         //arsonist douse
         for(let i in dayInfo){
-          if(dayInfo[i].information.filter(o=>{return o.type=="douse";}).length && !dayInfo[i].information.filter(o=>{return o.type=="jailed"}).length){
+          if(dayInfo[i].information.filter(o=>{return o.type=="douse";}).length && !dayInfo[i].information.filter(o=>{return o.type=="jail"}).length){
             dousedPlayers.push(dayInfo[i].index);
           }
         }
         //arsonist ignite
         for(let i in dayInfo){
-          if(dayInfo[i].information.filter(o=>{return o.type=="ignite";}).length && !dayInfo[i].information.filter(o=>{return o.type=="jailed"||o.type=="rb"}).length){
+          if(dayInfo[i].information.filter(o=>{return o.type=="ignite";}).length && !dayInfo[i].information.filter(o=>{return o.type=="jail"||o.type=="rb"}).length){
             hasIgnited = true;
             let igniters = dayInfo[i].information.filter(o=>{return o.type=="ignite";});
             for(let j in igniters){
@@ -1909,25 +1931,30 @@
                 for(let k in attacked){
                   str+=`Your target was attacked by a(n) ${players[attacked[k].by].role}\n`;
                 }
-                //mafia visits
-                let v = [];
-                let m = dayInfo.filter(o=>{
-                  return o.information.filter(k=>{
-                    return k.visit&&/(mafioso)|(godfather)|(framer)|(janitor)|(disguiser)|(consort)|(consiglier)/g.test(players[k.by].role);
-                  }).length;
-                });
-                for(let l in m){
-                  v.push(players[m[l].index].name);
-                }
-                str += `The mafia visited ${v.join(", ")}`;
-                dayInfo[i].main = str;
               }
             }
+            //mafia visits
+            let v = [];
+            let m = dayInfo.filter(o=>{
+              return o.information.filter(k=>{
+                return k.visit&&/(mafioso)|(godfather)|(framer)|(janitor)|(disguiser)|(consort)|(consiglier)/g.test(players[k.by].role);
+              }).length;
+            });
+            for(let l in m){
+              v.push(players[m[l].index].name);
+            }
+            str += `The mafia visited ${v.join(", ")}`;
+            dayInfo[i].main = str;
             break;
           }
           //if target was jailed
           if(dayInfo[i].information.filter(o=>{return o.type == "jail";}).length){
-            dayInfo[i].main = "Your target was jailed";
+            let ppl = dayInfo[i].information.filter(o=>{
+              return o.by != dayInfo[i].index && o.visit && o.type != "jail";
+            });
+            for(let j in ppl){
+              dayInfo[ppl[j].by].main += "Your target was jailed."
+            }
           }
         }
         dousedPlayers = hasIgnited ? [] : dousedPlayers;
@@ -2227,6 +2254,7 @@
           updateStats();
           if(turn == -1){
             playMusic();
+            updatePlayerLists();
           }
         }
         turn ++;
@@ -2307,7 +2335,7 @@
             night++;
             time = "night";
             turn = -1;
-            updatePlayerLists();
+            updatePlayerLists(true);
           }
           if(turn == 4){
             time = "night";
